--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');</style>
     <title>Document</title>
 </head>
 <body>
     <h1>Shopping List</h1>
-    <input class="text" placeholder="produit">
-    <button>Ajouter</button>
+    <div class="button">
+        <input class="text" placeholder="produit">
+        <button id="action">Ajouter</button>
+    </div>
         <ul class="list">
             <li>Pain</li>
             <li>Oeufs</li>
             <li>Lait</li>
             <li>Fruits</li>
         </ul>
+        <script src="script.js"></script>
 </body>
 </html>
