--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <style>@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');</style>
     <title>Document</title>
 </head>
 <body>
-    <h1>Shopping List</h1>
+    <h1 class="animate__animated animate__rubberBand">Shopping List</h1>
     <div class="button">
-        <input class="text" placeholder="produit">
+        <input id="input" class="text" placeholder="produit">
         <button id="action">Ajouter</button>
     </div>
-        <ul class="list">
-            <li>Pain</li>
+        <ul id="list">
+            <!-- <li>Pain</li>
             <li>Oeufs</li>
             <li>Lait</li>
-            <li>Fruits</li>
+            <li>Fruits</li> -->
         </ul>
         <script src="script.js"></script>
 </body>
