--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <h1 class="animate__animated animate__rubberBand">Shopping List</h1>
     <div class="button">
-        <input id="input" class="text" placeholder="produit">
-        <button id="action">Ajouter</button>
+        <input id="input" class="text" placeholder="Produit">
+        <button id="action" class="bubbly-button">Ajouter</button>
     </div>
         <ul id="list">
             <!-- <li>Pain</li>
