--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <h1 class="animate__animated animate__rubberBand">Shopping List</h1>
     <div class="button">
-        <input id="input" class="text" placeholder="Produit">
-        <button id="action" class="bubbly-button">Ajouter</button>
+        <input id="input"  type="text" class="text" placeholder="Produit">
+        <button id="action" type="submit" class="bubbly-button" >Ajouter</button>
     </div>
         <ul id="list">
             <!-- <li>Pain</li>
@@ -22,5 +22,10 @@
             <li>Fruits</li> -->
         </ul>
         <script src="script.js"></script>
+
 </body>
+<footer class="info">
+    <p>*un click pour barrer le produit</p>
+    <p>*double click pour supprimer le produit</p>
+</footer>
 </html>
