--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </body>
 <footer class="info">
-    <p>*un click pour barrer le produit</p>
-    <p>*double click pour supprimer le produit</p>
+    <p>*Un click pour barrer le produit</p>
+    <p>*Double click pour supprimer le produit</p>
 </footer>
 </html>
